boltffi_backend/tests/snapshots/swift__swift_target_renders_callback_record_returns.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_record_return\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Int32
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public protocol Listener: AnyObject {
    func point() -> Point
}

private final class ListenerWrapper {
    let impl: Listener

    init(_ impl: Listener) {
        self.impl = impl
    }
}

private var boltffiListenerVtable: ___ListenerVTable = {
    ___ListenerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        point: { handle in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            return wrapper.impl.point().cValue
        }
    )
}()

private enum ListenerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_listener(&boltffiListenerVtable)
    }()

    static func create(_ impl: Listener) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = ListenerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_listener(handle)
    }
}
