boltffi_backend/tests/snapshots/swift__swift_target_renders_class_handles_and_methods.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/kotlin_class_handles\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public final class Engine {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_engine(handle) }
    }

    public init(value: Int32) {
        self.handle = boltffi_init_class_demo_engine_new(value)
    }

    public static func version() -> UInt32 {
        return boltffi_method_class_demo_engine_version()
    }

    public func value() -> Int32 {
        return boltffi_method_class_demo_engine_value(self.handle)
    }

    public func swap(other: Engine) -> Engine {
        return Engine(handle: ({
            var __boltffiOwnedHandleother = other.__boltffiTakeHandle()
            defer { if __boltffiOwnedHandleother != 0 { boltffi_release_class_demo_engine(__boltffiOwnedHandleother) } }
            let __boltffiCallResult = boltffi_method_class_demo_engine_swap(self.handle, __boltffiOwnedHandleother)
            __boltffiOwnedHandleother = 0
            return __boltffiCallResult
        })())
    }

    public func maybeSwap(other: Engine?) -> Engine? {
        let boltffiHandle = ({
            var __boltffiOwnedHandleother = other?.__boltffiTakeHandle() ?? 0
            defer { if __boltffiOwnedHandleother != 0 { boltffi_release_class_demo_engine(__boltffiOwnedHandleother) } }
            let __boltffiCallResult = boltffi_method_class_demo_engine_maybe_swap(self.handle, __boltffiOwnedHandleother)
            __boltffiOwnedHandleother = 0
            return __boltffiCallResult
        })()
        return boltffiHandle == 0 ? nil : Engine(handle: boltffiHandle)
    }
}
