boltffi_backend/tests/snapshots/swift__swift_target_renders_closure_parameters.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/closure_parameter\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

private final class BoltFFIClosureBox<Invoke> {
    let invoke: Invoke

    init(_ invoke: Invoke) {
        self.invoke = invoke
    }
}

public func install(callback: @escaping (UInt32) -> UInt32) {
    let boltffiCallbackBox = BoltFFIClosureBox<(UInt32) -> UInt32>(callback)
    let boltffiCallbackContext = Unmanaged.passRetained(boltffiCallbackBox).toOpaque()
    let boltffiCallbackCall: @convention(c) (UnsafeMutableRawPointer?, UInt32) -> UInt32 = { context, arg0 in
        return Unmanaged<BoltFFIClosureBox<(UInt32) -> UInt32>>.fromOpaque(context!).takeUnretainedValue().invoke(arg0)
    }
    let boltffiCallbackRelease: @convention(c) (UnsafeMutableRawPointer?) -> Void = { context in
        guard let context = context else { return }
        Unmanaged<BoltFFIClosureBox<(UInt32) -> UInt32>>.fromOpaque(context).release()
    }
    boltffi_function_demo_install(boltffiCallbackCall, boltffiCallbackContext, boltffiCallbackRelease)
}
