boltffi_backend/tests/snapshots/swift__swift_target_renders_constants.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"constant/literals_and_accessors\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public enum Mode: UInt8, Hashable, Sendable, CaseIterable {
    case fast = 1
    case slow = 2

    @usableFromInline init(fromC c: UInt8) {
        self = Mode(rawValue: c)!
    }

    @usableFromInline var cValue: UInt8 {
        rawValue
    }
}

public let enabled: Bool = true

public let limit: UInt32 = 1024

public let half: Double = 0.5

public let greeting: String = "hello"

public let defaultMode: Mode = Mode.fast

public var magic: Data {
    let boltffiResult = boltffi_const_demo_magic()
    defer { boltffi_free_buf(boltffiResult) }
    return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readBytes() }
}
