boltffi_backend/tests/snapshots/swift__swift_target_renders_custom_type_defaults_through_representations.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"records/custom_type_default\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct LengthFFI: Hashable, Equatable, Sendable {
    public var meters: Double

    public init(meters: Double) {
        self.meters = meters
    }

    @usableFromInline init(fromC c: ___LengthFFI) {
        self.init(meters: c.meters)
    }

    @usableFromInline var cValue: ___LengthFFI {
        ___LengthFFI(meters: meters)
    }

    @inlinable static func decode(from reader: inout WireReader) -> LengthFFI {
        LengthFFI(meters: reader.readF64())
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeF64(self.meters)
    }
}

public struct DeviationConfig: Hashable, Equatable, Sendable {
    public var maxRejoinDistance: Length

    public init(maxRejoinDistance: Length = LengthFFI(meters: 1500)) {
        self.maxRejoinDistance = maxRejoinDistance
    }

    @inlinable static func decode(from reader: inout WireReader) -> DeviationConfig {
        DeviationConfig(maxRejoinDistance: LengthFFI.decode(from: &reader))
    }

    @inlinable func encode(to writer: inout WireWriter) {
        self.maxRejoinDistance.encode(to: &writer)
    }
}

public typealias Length = LengthFFI
