boltffi_backend/tests/snapshots/swift__swift_target_renders_custom_type_mappings.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture_with_host(\"exports/custom_string_type_functions\", host)"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func keepEmail(value: URL) -> URL {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeString(value.absoluteString) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_keep_email(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in URL(string: boltffiReader.readString())! }
    }
}
