boltffi_backend/tests/snapshots/swift__swift_target_renders_custom_types_through_representations.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/custom_type_functions\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func keepTimestamp(value: Timestamp) -> Timestamp {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeI64(value) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_keep_timestamp(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readI64() }
    }
}

public typealias Timestamp = Int64
